2002-05-12  Masatake YAMATO  <yamato@redhat.com>

	* Makefile.am: Made output.h installed.
	
	* spline.h: Use macros newly defined in output.h.

	* output.[ch]: Added macros and functions that supports
	accessing splines data. Don't include output.h.

	* output-*.h: Use at_spline_list_array_type as a 
	formal argument instead of spline_list_array_type.

	* output-fig.c: Include spline.h.

	* autotrace.[ch] (at_color_equal): New function.
	
2002-05-06  Martin Weber <martweb@gmx.net>

	* filename.c (make_suffix): length_through_dot
	is typed to unsigned long for 64bit arch.
	(remove_suffix): Likewise.

	* curve.c (log_curve): Cast curve to unsigned long for 64bit
	arch.
	(log_entire_curve): Likewise.

	* autotrace.vcproj: Added output-dr2d.[ch].

	Message-ID: <3CD5A1C6.8717C29F@gmx.net>.
	Message-ID: <3CD5A2DB.2F467808@gmx.net>.

2002-05-04  Masatake YAMATO  <yamato@redhat.com>

	* *.c: include config.h.

	* configure.in (AM_CONFIG_HEADER): Use config.h.

	* acconfig.h: New file.

2002-05-01  Masatake YAMATO  <yamato@redhat.com>

	* configure.in: Version 0.30.1.

	* autotrace.1: Updated.

	* HACKING: Updated.

2002-04-30  Masatake YAMATO  <yamato@redhat.com>

	* Makefile.am (output_src): Added output-dr2d.c.

	* output-dr2d.c: Moved the declarations in
	output-dr2d.h to output-dr2d.c. Added static the 
	declarations.

2002-04-30  Martin Weber <martweb@gmx.net>

	* autotrace.dsp: updated.

	* autotrace.vcproj: ditto.

	* output.c: Added dr2d output writer.

	* output-dr2d.[ch]: New files.
	Contributed by Andrew Elia.

	Message-ID: <3CCE6457.AFDECB1F@gmx.net>.

2002-04-30  Masatake YAMATO  <yamato@redhat.com>

	* output-svg.c (out_splines): Added `;' after `:none'.

	* autotrace.h (_at_spline_list_array_type): Added
	new field background_color.

	* fit.c (fitted_splines): Copy background_color
	into splines.
	* autotrace.c (at_splines_free):
	free background_color.

2002-04-30  Martin Weber <martweb@gmx.net>

	* output-*.*: fixed output generation when option 